fix overflow with scroll

--- a/src/styles/CartPopUp.css
+++ b/src/styles/CartPopUp.css
@@ -67,6 +67,7 @@
   .cart-pop-up-current-item {
     width: 80%;
     height: 70%;
+    overflow-y: scroll;
   }
 
   .cart-pop-up-item {
@@ -80,12 +81,16 @@
 
   .cart-pop-up-item-img {
     width: 32%;
-    margin-right: 2vw;
+    margin-right: 1vw;
   }
 
   .cart-pop-up-item-img > img {
     width: 100%;
     display: block;
+  }
+
+  .cart-pop-up-item-description {
+    width: 80%;
   }
 
   .cart-pop-up-item-delete {
